[project]
name = "dt"
description = "A comparison tool between level lines and geodesic distance transform"
readme = "README.md"
version = "0.1.0"
authors = [{ name = "Baptiste Esteban", email = "baptiste.esteban@epita.fr" }]
requires-python = "==3.11.*"
dependencies = [
    "numpy==2.3",
    "pyside6==6.10.2",
    "matplotlib==3.10.8",
    "numba==0.63.1",
]

[dependency-groups]
dev = ["ruff==0.15.0"]
